--- a/finderservice/src/styles/globals.css
+++ b/finderservice/src/styles/globals.css
@@ -18,7 +18,12 @@
 }
 
 .titleShadow{
-    text-shadow: 1px 5px 3px #000000;
+    text-shadow: 2px 3px 2px rgba(0,0,0,.8);
+}
+
+
+.boxShadow{
+    box-shadow: 0px 10px 14px rgba(0,0,0,.8);
 }
 
 .homeIconItem{
