--- a/finderservice/src/styles/globals.css
+++ b/finderservice/src/styles/globals.css
@@ -59,3 +59,7 @@
 .navDropLink{
     @apply px-4 py-2 flex flex-row items-center gap-2 hover:bg-blue-100/50 border-l-4 border-blue-100
 }
+
+.contentCentered{
+    @apply w-full h-screen flex flex-col items-center
+}
