--- a/finderservice/src/styles/globals.css
+++ b/finderservice/src/styles/globals.css
@@ -65,5 +65,5 @@
 }
 
 .contentCentered{
-    @apply w-full h-screen flex flex-col items-center
+    @apply w-full h-screen flex flex-col items-center justify-center
 }
